--- a/index.html
+++ b/index.html
@@ -118,16 +118,16 @@
         <div class="carousel-inner">
             <div class="carousel-item active">
                 <img class="img-fluid w-100 h-100 overflow-hidden"
-                    src="https://images.jdmagicbox.com/comp/hyderabad/86/040p5415486/catalogue/sri-chaitanya-techno-school-uppal-hyderabad-schools-znqd76cgfn.jpg"
+                    src="file:///C:/Users/SVCS/Downloads/Project_School/image/about/b6bb4332-349c-4722-8f60-245b5110a4f6.jpg"
                     class="d-block w-100" alt="...">
                 <div class="carousel-caption d-block">
-                    <h5>Shree Suryodaya Secondary School</h5>
-                    <p>Some representative placeholder content for the first slide.</p>
+                    <h5>10/10 students,</h5>
+                    <p>In 2023</p>
                 </div>
             </div>
             <div class="carousel-item">
                 <img class="img-fluid w-100 h-100 overflow-hidden"
-                    src="https://cdn.pixabay.com/photo/2017/02/05/00/08/graduation-2038864_960_720.jpg"
+                    src="file:///C:/Users/SVCS/Downloads/Project_School/image/about/4cae9a0b-4801-4f5e-b7a7-ec3ab113ac44.jpg"
                     class="d-block w-100" alt="...">
                 <div class="carousel-caption d-block">
                     <h5>Shree Suryodaya Secondary School</h5>
